[package]
name = "ktane-utils"
version = "0.1.0"
authors = ["NieDzejkob <kuba@kadziolka.net>"]
edition = "2018"

[dependencies]
enumflags = "^0.4"
enumflags_derive = "^0.4"
enum-map = "^0.4"
lazy_static = "^1.2"
num-derive = "^0.2"
num-traits = "^0.2"
ordered-float = "^1.0"
ordinal = "^0.2"
regex = "^1.1"
smallvec = "^0.6"
strum = "^0.13"
strum_macros = "^0.13"
