[package]
name = "ktanesim"
version = "0.1.0"
authors = ["Jakub \"NieDżejkob\" Kądziołka <kuba@kadziolka.net>"]
edition = "2018"
publish = false

[dependencies]
ktane-utils = { path = "../ktane-utils" }
# Use the same version as ktane-utils
rand = "*"
smallvec = "*"
strum = "*"
strum_macros = "*"
lazy_static = "*"
regex = "*"

# Use the same version as serenity
typemap = "*"
log = "*"

# data structures
smallbitvec = "^2.3"
arrayvec = "^0.4"
phf = "^0.7"
phf_macros = "^0.7"

cairo-rs = { version = "^0.5", features = ["png"] }
cairo-svgpath = "^0.1"

kankyo = "^0.2"
env_logger = "^0.6"

humantime = "^1.2"
itertools = "^0.8"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "v0.6.x"
