[package]
name = "ktanesim"
version = "0.1.0"
authors = ["Jakub \"NieDżejkob\" Kądziołka <kuba@kadziolka.net>"]
edition = "2018"
publish = false

[dependencies]
ktane-utils = { path = "../ktane-utils" }
# Use the same version as ktane-utils.
# Not a problem since the crate is in the same repository and workspace.
lazy_static = "*"
ordinal = "*"
rand = "*"
regex = "*"
smallvec = "*"
strum = "*"
strum_macros = "*"

# Use the same version as serenity. If the version used changes and the new version is breaking.
# it's a problem either way.
log = "*"
threadpool = "*"
parking_lot = "*"

arrayvec = "^0.4"
cairo-rs = { version = "^0.5", features = ["png"] }
cairo-svgpath = "^0.1"
env_logger = "^0.6"
humantime = "^1.2"
itertools = "^0.8"
joinery = "^2.0"
kankyo = "^0.2"
lazy_format = "^1.5"
percent-encoding = "^1.0"
phf = "^0.7"
phf_macros = "^0.7"
smallbitvec = "^2.3"
timer_heap = "^0.3"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "v0.6.x"
