[package]
name = "ktanesim"
version = "0.1.0"
authors = ["Jakub \"NieDżejkob\" Kądziołka <kuba@kadziolka.net>"]
edition = "2018"
publish = false

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "v0.6.x" }
ktane-utils = { path = "../ktane-utils" }

# Use the same version as serenity. If the version used changes and the new version is breaking,
# it's a problem either way.
log = "~0.4"
threadpool = "~1.7"
parking_lot = "^0.6"

arrayvec = "^0.4"
cairo-rs = { version = "^0.5", features = ["png"] }
cairo-svgpath = "^0.1"
env_logger = "^0.6"
git-testament = "^0.1"
humantime = "^1.2"
itertools = "^0.8"
joinery = "^2.0"
kankyo = "^0.2"
lazy_format = "^1.5"
lazy_static = "^1.2"
ordinal = "^0.2"
percent-encoding = "^1.0"
phf = "^0.7"
phf_macros = "^0.7"
rand = "^0.6"
regex = "^1.1"
smallbitvec = "^2.3"
smallvec = "^0.6"
strum = "^0.15"
strum_macros = "^0.15"
timer_heap = "^0.3"
